@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-30T16:28:42Z",
+  "timestamp" : "2022-10-01T01:59:16Z",
   "count_outdated" : 552,
   "uniques_outdated" : 318,
-  "count" : 583,
+  "count" : 584,
   "uniques" : 334,
   "clones" : [
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-09-30T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
